Revert "fix h1 cutoff on mobile"
This reverts commit 194701efa462838435accddd9b6b475f692d0ee7.

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -85,19 +85,7 @@
     outline: none;
     border-bottom: 0.25rem solid #3974bd;
   }
-  .masthead {
-    height: 100vh;
-    padding: 0;
-  }
-  .masthead h1 {
-    font-size: 6.5rem;
-    line-height: 6.5rem;
-    letter-spacing: 0.8rem;
-  }
-  .masthead h2 {
-    max-width: 30rem;
-    font-size: 1.25rem;
-  }
+
 }
 
 .masthead {
@@ -134,6 +122,22 @@
   .masthead h1 {
     font-size: 4rem;
     line-height: 4rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .masthead {
+    height: 100vh;
+    padding: 0;
+  }
+  .masthead h1 {
+    font-size: 6.5rem;
+    line-height: 6.5rem;
+    letter-spacing: 0.8rem;
+  }
+  .masthead h2 {
+    max-width: 30rem;
+    font-size: 1.25rem;
   }
 }
 
